# mate-paint-pro

./: README.md  mate-paint-pro.desktop  mate-paint.cpp  meson.build  mp.xpm
data/icons/: meson.build
data/icons/16x16/actions/: meson.build
data/icons/48x48/: mpp.xpm
