install_data([
  'stock_draw-curve.png',
  'stock_draw-ellipse.png',
  'stock_draw-line.png',
  'stock_draw-rectangle.png',
  'stock_draw-pentagon.png',
  'stock_draw-rounded-rectangle.png',
  'stock-tool-free-select.png',
  'stock-tool-airbrush.png',
  'stock-tool-bucket-fill.png',
  'stock-tool-color-picker.png',
  'stock-tool-eraser.png',
  'stock-tool-gradient-fill.png',
  'stock-tool-paintbrush.png',
  'stock-tool-pencil.png',
  'stock-tool-rect-select.png',
  'stock-tool-text.png',
  'stock-tool-zoom.png',
  'stock_draw-fill_polygon.png',
], install_dir: join_paths(pkgdatadir, 'icons', 'hicolor', '16x16', 'actions'))
